--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <p class="rights">&copy; Copyright 2018 Huddle. All rights reserved.</p>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Harder</a>.
+      Coded by <a href="https://www.twitter.com/KAREEMHARDER">Harder</a>.
     </p>
   </footer>
 </body>
